<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DIINDIIN</string>
    <string name="expenseTypes">Lista de Tipos</string>
    <string name="yearselected">Ano Selecionado</string>
    <string name="title_editexpensetype">Atualiza Tipo de Despesa</string>
    <string name="title_expenses">Despesas</string>
    <string name="title_incoming">Acumulado</string>
    <string name="title_chartreport">Demonstrativo</string>
    <string name="title_newexpense">Nova Despesa</string>
    <string name="title_editexpense">Atualizar Despesa</string>
    <string name="title_editincoming">Atualizar Salário</string>
    <string name="title_newincoming">Nova Entrada</string>
    <string name="type_label">Categoria:</string>
    <string name="value_label">Valor:</string>
    <string name="description_label">Descrição:</string>
    <string name="date_label">Data:</string>
    <string name="savelabel">Salvar</string>
    <string name="All">Todos</string>
    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="june">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Outubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>
    <string name="messageAboutWrongYear">Só é possível escolher datas do ano atual.</string>
    <string name="clearAllData">Limpar todos os dados.</string>
    <string name="msgAreYouSure">Você tem certeza?</string>
    <string name="pleaseRestartTheApp">Por favor, feche o aplicativo para as suas funções serem reinicializadas.</string>
    <string name="valueIsImportant">O valor deve ser preenchido.</string>
    <string name="reorderDescriptionIcon">Define um ícone para reordenar</string>
    <string name="iconExpenseTypeDescription">Define um ícone que representa o tipo de despesa</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="done">Feito</string>
    <string name="info">Sobre</string>
    <string name="expenseTotal">Despesas: </string>
    <string name="salaryTotal">Recebido: </string>
    <string name="walletTotal">Carteira: </string>
    <string name="chooseColor">Escolha uma cor:</string>
    <string name="settings">Configurações</string>
    <string name="fillAreFields">Preencha todos os campos!</string>
    <string name="sucessaction">Operação realizada com sucesso</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="expensetype">Tipo de Despesa</string>
    <string name="change">Mudar</string>
    <string name="food">Comida</string>
    <string name="pets">Animais</string>
    <string name="phone">Telefone</string>
    <string name="education">Educação</string>
    <string name="health">Saúde</string>
    <string name="funn">Diversão</string>
    <string name="rent">Aluguel</string>
    <string name="travel">Viagem</string>
    <string name="transport">Transporte</string>
    <string name="others">Outros</string>
    <string name="contentDescriptionToExpenses">Imagem que representa a despesa</string>
    <string name="contentDescriptionToMenu">Ícone de menu</string>
</resources>
